--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://engineering-for-engineer.net/
+baseURL: https://engineering-for-engineer.netlify.app/
 title: E4E
 languageCode: ja-JP
 defaultContentLanguage: ja
