--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ params:
   homeInfoParams:
     Title: "Engineering for Engineer"
     Content: >
-      バックエンド領域の課題解決について扱うブログです。
+      ストリームアラインドチーム・バックエンド領域の課題解決について扱うブログです。
 
 
       運営者はプラットフォームエンジニア2年目で、その前は7年バックエンドエンジニアをしていました。
